src/parser/tigerParser.java
// Generated from ./tiger.g4 by ANTLR 4.9.2

package parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tigerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, INT=29, IDENTIFIER=30, OPERATOR_MULT_DIV=31, 
		OPERATOR_PLUS_MOINS=32, OPERATOR_ET=33, OPERATOR_OU=34, OPERATOR_COMPARATEUR=35, 
		OPERATOR_MOINS=36, OPERATOR_EGAL=37, STRING=38, COMMENTAIRE=39, WS=40;
	public static final int
		RULE_atom = 0, RULE_program = 1, RULE_dec = 2, RULE_typeDec = 3, RULE_ty = 4, 
		RULE_arrTy = 5, RULE_recTy = 6, RULE_listrecTyFieldDec = 7, RULE_fieldDec = 8, 
		RULE_funDec = 9, RULE_listArgs = 10, RULE_funDecBody = 11, RULE_varDec = 12, 
		RULE_varDecA = 13, RULE_lValue = 14, RULE_exp = 15, RULE_seqExp = 16, 
		RULE_callExp = 17, RULE_callExpList = 18, RULE_create = 19, RULE_createA = 20, 
		RULE_arrCreate = 21, RULE_recCreate = 22, RULE_fieldCreate = 23, RULE_assignment = 24, 
		RULE_ifThenElse = 25, RULE_ifThen = 26, RULE_whileExp = 27, RULE_forExp = 28, 
		RULE_letExp = 29, RULE_listDec = 30, RULE_listExp = 31, RULE_orExp = 32, 
		RULE_andExp = 33, RULE_cmpExp = 34, RULE_asExp = 35, RULE_mdExp = 36, 
		RULE_negExp = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"atom", "program", "dec", "typeDec", "ty", "arrTy", "recTy", "listrecTyFieldDec", 
			"fieldDec", "funDec", "listArgs", "funDecBody", "varDec", "varDecA", 
			"lValue", "exp", "seqExp", "callExp", "callExpList", "create", "createA", 
			"arrCreate", "recCreate", "fieldCreate", "assignment", "ifThenElse", 
			"ifThen", "whileExp", "forExp", "letExp", "listDec", "listExp", "orExp", 
			"andExp", "cmpExp", "asExp", "mdExp", "negExp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'type'", "'array of'", "'{'", "'}'", "','", "':'", "'function'", 
			"'('", "')'", "'var'", "':='", "'['", "']'", "'.'", "'nil'", "'break'", 
			"';'", "'of'", "'if'", "'then'", "'else'", "'while'", "'do'", "'for'", 
			"'to'", "'let'", "'in'", "'end'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "INT", "IDENTIFIER", "OPERATOR_MULT_DIV", 
			"OPERATOR_PLUS_MOINS", "OPERATOR_ET", "OPERATOR_OU", "OPERATOR_COMPARATEUR", 
			"OPERATOR_MOINS", "OPERATOR_EGAL", "STRING", "COMMENTAIRE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tiger.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tigerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class AtomContext extends ParserRuleContext {
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
	 
		public AtomContext() { }
		public void copyFrom(AtomContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IntegerContext extends AtomContext {
		public TerminalNode INT() { return getToken(tigerParser.INT, 0); }
		public IntegerContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitInteger(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LValueAtomContext extends AtomContext {
		public LValueContext lValue() {
			return getRuleContext(LValueContext.class,0);
		}
		public LValueAtomContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitLValueAtom(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CallExpAtomContext extends AtomContext {
		public CallExpContext callExp() {
			return getRuleContext(CallExpContext.class,0);
		}
		public CallExpAtomContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitCallExpAtom(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringContext extends AtomContext {
		public TerminalNode STRING() { return getToken(tigerParser.STRING, 0); }
		public StringContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SeqExpAtomContext extends AtomContext {
		public SeqExpContext seqExp() {
			return getRuleContext(SeqExpContext.class,0);
		}
		public SeqExpAtomContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitSeqExpAtom(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdAtomContext extends AtomContext {
		public TerminalNode IDENTIFIER() { return getToken(tigerParser.IDENTIFIER, 0); }
		public IdAtomContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitIdAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_atom);
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new IntegerContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				match(INT);
				}
				break;
			case 2:
				_localctx = new StringContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(STRING);
				}
				break;
			case 3:
				_localctx = new SeqExpAtomContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				seqExp();
				}
				break;
			case 4:
				_localctx = new CallExpAtomContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(79);
				callExp();
				}
				break;
			case 5:
				_localctx = new IdAtomContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(80);
				match(IDENTIFIER);
				}
				break;
			case 6:
				_localctx = new LValueAtomContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(81);
				lValue();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(84);
				exp();
				}
				}
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__14) | (1L << T__15) | (1L << T__18) | (1L << T__21) | (1L << T__23) | (1L << T__25) | (1L << INT) | (1L << IDENTIFIER) | (1L << OPERATOR_MOINS) | (1L << STRING))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecContext extends ParserRuleContext {
		public TypeDecContext typeDec() {
			return getRuleContext(TypeDecContext.class,0);
		}
		public VarDecContext varDec() {
			return getRuleContext(VarDecContext.class,0);
		}
		public FunDecContext funDec() {
			return getRuleContext(FunDecContext.class,0);
		}
		public DecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecContext dec() throws RecognitionException {
		DecContext _localctx = new DecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dec);
		try {
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				typeDec();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				varDec();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				funDec();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDecContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(tigerParser.IDENTIFIER, 0); }
		public TerminalNode OPERATOR_EGAL() { return getToken(tigerParser.OPERATOR_EGAL, 0); }
		public TyContext ty() {
			return getRuleContext(TyContext.class,0);
		}
		public TypeDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitTypeDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDecContext typeDec() throws RecognitionException {
		TypeDecContext _localctx = new TypeDecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__0);
			setState(95);
			match(IDENTIFIER);
			setState(96);
			match(OPERATOR_EGAL);
			setState(97);
			ty();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TyContext extends ParserRuleContext {
		public TyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ty; }
	 
		public TyContext() { }
		public void copyFrom(TyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArrTyTyContext extends TyContext {
		public ArrTyContext arrTy() {
			return getRuleContext(ArrTyContext.class,0);
		}
		public ArrTyTyContext(TyContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitArrTyTy(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdTyContext extends TyContext {
		public TerminalNode IDENTIFIER() { return getToken(tigerParser.IDENTIFIER, 0); }
		public IdTyContext(TyContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitIdTy(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RecTyTyContext extends TyContext {
		public RecTyContext recTy() {
			return getRuleContext(RecTyContext.class,0);
		}
		public RecTyTyContext(TyContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitRecTyTy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TyContext ty() throws RecognitionException {
		TyContext _localctx = new TyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ty);
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				_localctx = new IdTyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				match(IDENTIFIER);
				}
				break;
			case T__1:
				_localctx = new ArrTyTyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				arrTy();
				}
				break;
			case T__2:
				_localctx = new RecTyTyContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				recTy();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrTyContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(tigerParser.IDENTIFIER, 0); }
		public ArrTyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrTy; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitArrTy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrTyContext arrTy() throws RecognitionException {
		ArrTyContext _localctx = new ArrTyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrTy);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(T__1);
			setState(105);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecTyContext extends ParserRuleContext {
		public ListrecTyFieldDecContext listrecTyFieldDec() {
			return getRuleContext(ListrecTyFieldDecContext.class,0);
		}
		public RecTyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recTy; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitRecTy(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecTyContext recTy() throws RecognitionException {
		RecTyContext _localctx = new RecTyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_recTy);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__2);
			setState(108);
			listrecTyFieldDec();
			setState(109);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListrecTyFieldDecContext extends ParserRuleContext {
		public List<FieldDecContext> fieldDec() {
			return getRuleContexts(FieldDecContext.class);
		}
		public FieldDecContext fieldDec(int i) {
			return getRuleContext(FieldDecContext.class,i);
		}
		public ListrecTyFieldDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listrecTyFieldDec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitListrecTyFieldDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListrecTyFieldDecContext listrecTyFieldDec() throws RecognitionException {
		ListrecTyFieldDecContext _localctx = new ListrecTyFieldDecContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_listrecTyFieldDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(111);
				fieldDec();
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(112);
					match(T__4);
					setState(113);
					fieldDec();
					}
					}
					setState(118);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldDecContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(tigerParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(tigerParser.IDENTIFIER, i);
		}
		public FieldDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitFieldDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldDecContext fieldDec() throws RecognitionException {
		FieldDecContext _localctx = new FieldDecContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fieldDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(IDENTIFIER);
			setState(122);
			match(T__5);
			setState(123);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDecContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(tigerParser.IDENTIFIER, 0); }
		public ListArgsContext listArgs() {
			return getRuleContext(ListArgsContext.class,0);
		}
		public FunDecBodyContext funDecBody() {
			return getRuleContext(FunDecBodyContext.class,0);
		}
		public FunDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitFunDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunDecContext funDec() throws RecognitionException {
		FunDecContext _localctx = new FunDecContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_funDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__6);
			setState(126);
			match(IDENTIFIER);
			setState(127);
			match(T__7);
			setState(128);
			listArgs();
			setState(129);
			match(T__8);
			setState(130);
			funDecBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListArgsContext extends ParserRuleContext {
		public List<FieldDecContext> fieldDec() {
			return getRuleContexts(FieldDecContext.class);
		}
		public FieldDecContext fieldDec(int i) {
			return getRuleContext(FieldDecContext.class,i);
		}
		public ListArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listArgs; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitListArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListArgsContext listArgs() throws RecognitionException {
		ListArgsContext _localctx = new ListArgsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_listArgs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(132);
				fieldDec();
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(133);
					match(T__4);
					setState(134);
					fieldDec();
					}
					}
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDecBodyContext extends ParserRuleContext {
		public FunDecBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDecBody; }
	 
		public FunDecBodyContext() { }
		public void copyFrom(FunDecBodyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FunDecBodyWithIdContext extends FunDecBodyContext {
		public TerminalNode IDENTIFIER() { return getToken(tigerParser.IDENTIFIER, 0); }
		public TerminalNode OPERATOR_EGAL() { return getToken(tigerParser.OPERATOR_EGAL, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public FunDecBodyWithIdContext(FunDecBodyContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitFunDecBodyWithId(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunDecBodyWithoutIdContext extends FunDecBodyContext {
		public TerminalNode OPERATOR_EGAL() { return getToken(tigerParser.OPERATOR_EGAL, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public FunDecBodyWithoutIdContext(FunDecBodyContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitFunDecBodyWithoutId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunDecBodyContext funDecBody() throws RecognitionException {
		FunDecBodyContext _localctx = new FunDecBodyContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_funDecBody);
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPERATOR_EGAL:
				_localctx = new FunDecBodyWithoutIdContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				match(OPERATOR_EGAL);
				setState(143);
				exp();
				}
				break;
			case T__5:
				_localctx = new FunDecBodyWithIdContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				match(T__5);
				setState(145);
				match(IDENTIFIER);
				setState(146);
				match(OPERATOR_EGAL);
				setState(147);
				exp();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDecContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(tigerParser.IDENTIFIER, 0); }
		public VarDecAContext varDecA() {
			return getRuleContext(VarDecAContext.class,0);
		}
		public VarDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tigerVisitor ) return ((tigerVisitor<? extends T>)visitor).visitVarDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDecContext varDec() throws RecognitionException {
		VarDecContext _localctx = new VarDecContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_varDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(T__9);
			setState(151);
			match(IDENTIFIER);
			setState(152);
			varDecA();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
